# llm-skills-bench

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml  requirements.txt
src/llm_skills_bench/: adapters.py  catalog.py  cli.py  dashboard.py  runner.py  schema.py  scorers.py
src/llm_skills_bench/skills/: coding.yaml  instruction_following.yaml  knowledge.yaml  reasoning.yaml  tool_use.yaml
src/llm_skills_bench/templates/: dashboard.html
tests/: test_catalog.py  test_dashboard.py  test_runner.py  test_scaffold.py
