[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-skills-bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "jinja2>=3.1.6",
    "pydantic>=2.11.5",
    "openai>=1.82.1",
    "anthropic>=0.52.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.27.1",
    "rich>=14.0.0",
]

[project.scripts]
llm-bench = "llm_skills_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"llm_skills_bench" = ["skills/*.yaml", "templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
